<?xml version="1.0"?>
<package format="2">
  <name>grizzly_motor_driver</name>
  <version>0.0.1</version>
  <description>A driver for the motor controllers used in the Grizzly.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grizzly_motor_msgs</depend>
  <depend>roscpp</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>can-utils</exec_depend>

  <test_depend>roslint</test_depend>
</package>
